--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -71,3 +71,5 @@ This plot shows that theres a difference of the alcohol consumed between the bac
 ## Conclusions
 
 
+After reviewing the numerical data, and the inferential tests we can conclude that the people who are seated at the back consume more alcohol than those who are seated in the middle or front. The numerical data showed a high mean averge of 9 alcoholic drinks consumed in the back, yet there was an average of 3 drinks in the middle rows and 1 average drink in the front. also, the p-value was to small 0,000116 indicating that the chances of having no difference in the alcohol consumed in the 3 different rows is too slim.
+
